infra/k8s/overlay/prod/routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smartmeal-api
spec:
  hostnames:
    - api.ocgi.space
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /swagger
      backendRefs:
        - name: smartmeal-api
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smartmeal-predict
spec:
  hostnames:
    - api.ocgi.space
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /predict
      backendRefs:
        - name: smartmeal-predict
          port: 8000
